# han-p1-port-pico-pi-w

./: CMakeLists.txt  README.md  config.h  crc16.cpp  crc16.hpp  main.cpp  ntp.cpp  ntp.hpp  tcp_client.cpp  tcp_client.hpp  uart.cpp  uart.hpp
